Just messed around with css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <button id="btn" onclick="">Klikaj tu</button>
+        <button id="btn" onclick="">Click here :)</button>
         <div id="result">o</div>
         <button id="resetbtn">reset</button>
         <button id="minusbtn">minus</button>
